# cmake_hotreload_template

./: CMakeLists.txt  README.md
game/: CMakeLists.txt  fu_std_impl.c  template.c  template.h
include/: fu_std.h
main/: CMakeLists.txt  main.c
main_release/: CMakeLists.txt  main.c
